Added some basic listing of quizzes on the homepage and quiz views

--- a/quizapp/templates/index.html
+++ b/quizapp/templates/index.html
@@ -1,1 +1,9 @@
 <h1>Hello to Quizzer!</h1>
+
+<h2>Here are the available quizzes:</h2>
+
+<ul>
+    {% for quiz in quizzes %}
+        <li><a href="quiz/{{ quiz.id }}">{{ quiz.name }}</a></li>
+    {% endfor %}
+</ul>
