--- a/quizzes/templates/index.html
+++ b/quizzes/templates/index.html
@@ -1,9 +1,6 @@
-{% load static %}
+{% extends "base.html" %}
 
 {% block content %}
-  <!-- Include navbar if not in base.html -->
-  {% include 'navbar.html' %}
-
   <!-- Simple Header Section -->
   <div class="container text-center mt-5">
     <h1 class="mb-3">Quizzer</h1>
