--- a/quizzes/templates/index.html
+++ b/quizzes/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
   <!-- Simple Header Section -->
   <div class="container text-center mt-5">
@@ -31,21 +33,16 @@
   <div class="row">
     {% for category in categories %}
       <div class="col-md-4 mb-4">
-        <div class="card h-100 card-hover">
-          <div class="card-body d-flex flex-column">
-            <!-- Example: Using Bootstrap Icons (bi-globe, bi-book, etc.) -->
-            <h4 class="card-title">
-              <i class="bi bi-globe2 mr-2"></i> 
-              {{ category.name }}
-            </h4>
-            <p class="card-text text-muted flex-grow-1">
-              {{ category.description|default:"No description provided." }}
-            </p>
-            <!-- Link still points to index; update later when category detail pages exist -->
-            <a href="{% url 'index' %}" class="btn btn-outline-primary mt-auto btn-animate">
-              View Quizzes
-            </a>
-          </div>
+        <div class="card mb-3 h-100 card-hover" href="{% url 'index' %}">
+            <img src="{% static 'images/categories/' %}{{ category.name }}.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">{{category.name}}</h4>
+                <p class="card-text text-muted flex-grow-1">
+                {{ category.description|default:"No description provided." }}
+                </p>
+            </div>
+            <!-- This stretched-link anchor covers the whole card body -->
+            <a href="{% url 'index' %}" class="stretched-link"></a>
         </div>
       </div>
     {% empty %}
