--- a/quizzes/templates/home.html
+++ b/quizzes/templates/home.html
@@ -20,8 +20,10 @@
     <div class="category-cards">
       {% for category in categories %}
         <div class="category-card">
+          <a href="{% url 'category' category.id %}" style="text-decoration: none; color: inherit; display: block;">
             <h3>{{ category.name }}</h3>
             <p>{{ category.description }}</p>
+          </a>
         </div>
       {% endfor %}
     </div>
