Add hrefs to home in the navbar

--- a/quizzes/templates/partials/navbar.html
+++ b/quizzes/templates/partials/navbar.html
@@ -1,8 +1,8 @@
 <header>
-  <a href="#" class="logo">Quizzer</a>
+  <a href="{% url 'home' %}" class="logo">Quizzer</a>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="{% url 'home' %}">Home</a></li>
       <li><a href="#">Leaderboard</a></li>
       <li><a href="#">Friends</a></li>
       <li><a href="#">Create a Quiz</a></li>
