Added categories_all page to view all avilable categories

--- a/quizzes/templates/home.html
+++ b/quizzes/templates/home.html
@@ -7,9 +7,9 @@
 <section id="hero">
   <h1>Challenge Yourself, Endless Fun!</h1>
   <p>Test your knowledge with quirky quizzes and challenge your friends!</p>
-  <button onclick="alert('Start Quiz Button Clicked!')">
-    Start a Quiz Now
-  </button>
+  <a href="{% url 'categories_all' %}" class="hero-button">
+    See all categories
+  </a>
 </section>
 
 <!-- MAIN CONTENT CONTAINER -->
