--- a/quizzes/templates/home.html
+++ b/quizzes/templates/home.html
@@ -53,38 +53,47 @@
 
   <!-- LEADERBOARD SECTION PLACEHOLDER -->
   <section id="leaderboard">
-    <h2>Leaderboard</h2>
-    <table class="leaderboard-table">
-      <thead>
-        <tr>
-          <th>Rank</th>
-          <th>User</th>
-          <th>Points</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Alice</td>
-          <td>1890</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Bob</td>
-          <td>1720</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Chris</td>
-          <td>1680</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Dana</td>
-          <td>1590</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="leaderboard-container">
+      <h2>Leaderboard</h2>
+      <table class="leaderboard-table">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>User</th>
+            <th>Points</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Alice</td>
+            <td>1890</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Bob</td>
+            <td>1720</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Chris</td>
+            <td>1680</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Dana</td>
+            <td>1590</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Edward</td>
+            <td>1440</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
   </section>
 </main>
 
