--- a/quizzes/templates/quiz.html
+++ b/quizzes/templates/quiz.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 
-<!-- Outer container to hold both the quiz pane (left) and a decorative pane (right) -->
 <div class="quiz-page-container">
 
 
@@ -73,48 +72,46 @@
     </div>
   </div>
 
-  <div class="quiz-right-pane new-leaderboard-pane">
-    <section class="leaderboard-section">
-      <h2 class="leaderboard-title">Quiz Leaderboard</h2>
-      <div class="leaderboard-table-wrapper">
-        <table class="leaderboard-table-new">
-          <thead>
-            <tr>
-              <th>Rank</th>
-              <th>Player</th>
-              <th>Score</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>PlayerOne</td>
-              <td>2300</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>PlayerTwo</td>
-              <td>2200</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>PlayerThree</td>
-              <td>2100</td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>PlayerFour</td>
-              <td>2050</td>
-            </tr>
-            <tr>
-              <td>5</td>
-              <td>PlayerFive</td>
-              <td>2000</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
+  <div class="quiz-right-pane">
+    <div class="leaderboard-container" style="padding-inline: 0rem;">
+      <h2>{{ quiz.name }} Leaderboard</h2>
+      <table class="leaderboard-table">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>User</th>
+            <th>Points</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Alice</td>
+            <td>1890</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Bob</td>
+            <td>1720</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Chris</td>
+            <td>1680</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Dana</td>
+            <td>1590</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Edward</td>
+            <td>1440</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
