Moved the footer to the bottom

--- a/quizzes/templates/base.html
+++ b/quizzes/templates/base.html
@@ -11,8 +11,10 @@
 
   {% include 'partials/navbar.html' %}
   
-  {% block content %}
-  {% endblock %}
+  <main>
+    {% block content %}
+    {% endblock %}
+  </main>
   
   {% include 'partials/footer.html' %}
 
