--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,19 @@
 }
 
 /* GLOBAL STYLES */
+html {
+  height: 100%;
+}
+
+main {
+  flex: 1;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
   font-family: 'Signika Negative', sans-serif;
   color: var(--color-text-primary);
   background-color: var(--color-background-fallback);
