Changed the UI of the login button

--- a/quizzes/templates/partials/navbar.html
+++ b/quizzes/templates/partials/navbar.html
@@ -6,8 +6,8 @@
       <li><a href="#">Leaderboard</a></li>
       <li><a href="#">Friends</a></li>
       <li><a href="#">Create a Quiz</a></li>
-      <li><a href="#" class="login-btn">Log In</a></li>
-      <li><a href="#" class="signup-btn">Sign Up</a></li>
+      <li><a href="#" class="account-access-btn">Log In</a></li>
+      <li><a href="#" class="account-access-btn">Sign Up</a></li>
     </ul>
   </nav>
 </header>
