--- a/static/css/components.css
+++ b/static/css/components.css
@@ -1,18 +1,9 @@
 /* Distinguish login and sign-up buttons */
-.login-btn {
-  background-color: #FAF3EC;
-  border: 1px solid var(--color-primary);
-}
-.login-btn:hover {
+.account-access-btn {
   background-color: var(--color-primary);
   color: var(--color-white);
 }
-
-.signup-btn {
-  background-color: var(--color-primary);
-  color: var(--color-white);
-}
-.signup-btn:hover {
+.account-access-btn:hover {
   background-color: var(--color-primary-light);
   color: var(--color-white);
 }
