Changed the main to div on the homepage and introduced main container on the quiz page

--- a/quizzes/templates/home.html
+++ b/quizzes/templates/home.html
@@ -13,7 +13,7 @@
 </section>
 
 <!-- MAIN CONTENT CONTAINER -->
-<main class="container">
+<div class="container">
   <!-- CATEGORIES SECTION -->
   <section id="categories">
     <h2>Quiz Categories</h2>
@@ -95,6 +95,6 @@
     </div>
 
   </section>
-</main>
+</div>
 
 {% endblock %}
