Refined the quiz page UI to accommodate grid buttons

--- a/quizzes/templates/quiz.html
+++ b/quizzes/templates/quiz.html
@@ -42,25 +42,18 @@
       <div id="quizContainer" class="quiz-container" style="display: none;">
         <!-- Timer Display -->
         <!-- Current Question -->
-        <div id="questionHeader" class="question-header">
-          <h2 id="questionText" class="question-text">Question Goes Here</h2>
-          <div id="timer" class="quiz-timer">
-            Time left: <span>--</span> seconds
-          </div>
+        <div id="timer" class="quiz-timer">
+          Time left: <span>--</span> seconds
+        </div>
+        <div class="question-box">
+          <p id="questionText" class="question-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium sapiente omnis, quasi veniam distinctio in. Excepturi, in sint doloremque hic reprehenderit saepe possimus dolorum nobis sequi, numquam veniam sit consequatur?</p>
         </div>
         
-        <!-- User's Answer Input + Submit -->
-        <div class="answer-area">
-          <input 
-            type="text" 
-            id="answerInput" 
-            placeholder="Type your answer..." 
-            class="answer-input" />
-          <button 
-            id="submitAnswerBtn" 
-            class="answer-submit-btn">
-            Submit
-          </button>
+        <div class="answer-grid">
+          <button id="answerBtnA" class="answer-btn">Option A aserehe a ehe aleslf sfdsfdf opppaas sdfsdfshfds sdfsdf sdfsf</button>
+          <button id="answerBtnB" class="answer-btn">Option B Yubbi doobi doop</button>
+          <button id="answerBtnC" class="answer-btn">Option C</button>
+          <button id="answerBtnD" class="answer-btn">Option D</button>
         </div>
 
       </div>
